--- a/css/global/global.css
+++ b/css/global/global.css
@@ -3,8 +3,14 @@ body {
     font-family: "Nunito", Helvetica, Arial, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .container {
     margin: 0 auto;
-    max-width: 960px;
+    max-width: 1000px;
+    padding-left: 2%;
+    padding-right: 2%;
     width: 100%;
 }
