--- a/css/home/superinfo.css
+++ b/css/home/superinfo.css
@@ -1,6 +1,6 @@
 .superinfo-bg {
     background: var(--cor-02);
-    color: var(--cor-03);
+    color: var(--cor-04);
 }
 
 .superinfo {
@@ -13,5 +13,5 @@
 
 .superinfo p,
 .superinfo a {
-    margin: 0 10px 10px 10px;
+    margin: 0 10px 10px 0;
 }
