--- a/css/util/cores.css
+++ b/css/util/cores.css
@@ -4,4 +4,9 @@
     --cor-03: #2c70ff;
     --cor-04: #ffffff;
     --cor-05: #7c7c7c;
+    --cor-06: #a4a4a4;
+    --cor-07: #f7f7f7;
+    --cor-08: #ae81ff;
+    --cor-09: #f9265e;
+    --cor-10: #66d9eb;
 }
