--- a/css/home/contato.css
+++ b/css/home/contato.css
@@ -10,7 +10,7 @@
 }
 
 .contato-info {
-    flex: 1 1 260px;
+    flex: 1 1 240px;
 }
 
 .contato-info h1 {
@@ -39,13 +39,13 @@
     border: 4px solid var(--cor-03);
     border-radius: 0px;
     color: var(--cor-06);
-    flex: 3 1 200px;
+    flex: 3 1 260px;
     font-style: italic;
     font-size: 1.25rem;
     font-family: "Nunito", Arial, Helvetica, sans-serif;
     margin: 0px;
     outline: none;
-    padding: 10px;
+    padding: 15px 10px;
     transition: .3s;
 }
 
@@ -68,4 +68,10 @@
 
 .contato-formulario button:hover {
     background-color: var(--cor-02);
+}
+
+@media screen and (max-width: 600px) {
+    .contato-formulario button {
+        font-size: 1.5rem;
+    }
 }
